[gd_scene load_steps=12 format=2]

[ext_resource path="res://Script/Menu/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Spaceship/environment.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/king-gaming-free-trial.regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/styles/selected_button_hover.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/styles/non_selected_button.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/styles/button_hover.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/Images/menuimage.png" type="Texture" id=7]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.509091 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 131, 100, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 46
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
position = Vector2( 501, 258 )
script = ExtResource( 1 )

[node name="Environment2" type="Sprite" parent="."]
position = Vector2( 126, 86 )
scale = Vector2( 0.438087, 0.578793 )

[node name="Environment" type="Sprite" parent="Environment2"]
position = Vector2( -86.7408, -27.6437 )
texture = ExtResource( 2 )

[node name="Environment" type="Sprite" parent="."]
position = Vector2( 11.5, 26 )
scale = Vector2( 0.353043, 0.499581 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 10, 31 )
scale = Vector2( 5.1, 3 )
amount = 30
process_material = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -465.5
margin_top = 156.0
margin_right = -365.5
margin_bottom = 282.0
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_right = 100.0
margin_bottom = 14.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Play"

[node name="ShopButton" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 100.0
margin_bottom = 32.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "inventori"

[node name="HelpButton" type="Button" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 100.0
margin_bottom = 50.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Help"

[node name="AboutButton" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 100.0
margin_bottom = 68.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "About"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 86.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Exit"

[node name="Label" type="Label" parent="."]
margin_left = -331.0
margin_top = -155.0
margin_right = 375.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 5 )
text = "SPACESHIP GALACTIC WAR
"

[node name="Label2" type="Label" parent="."]
margin_left = 426.0
margin_top = 324.0
margin_right = 510.0
margin_bottom = 338.0
text = "Version 1.0.1"

[node name="Menuimage" type="Sprite" parent="Label2"]
position = Vector2( -415.5, -285.5 )
scale = Vector2( 0.530729, 0.543518 )
texture = ExtResource( 7 )

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
